--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
   "name": "perlin-noise-worldmap",
   "version": "0.1.0",
-  "description": "Using Perlin Noise to generate a worldmap and move dots.",
   "private": false,
-  "main": "build/index.js",
+  "description": "Using Perlin Noise to generate a worldmap and move dots.",
+  "author": "minagawah <minagawa@tokyo800.jp>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/minagawah/perlin-noise-worldmap.git"
-  },
-  "keywords": [
-    "perlin noise",
-    "vue"
-  ],
-  "author": "minagawah <minagawa@tokyo800.jp>",
-  "license": "mixed",
-  "bugs": {
-    "url": "https://github.com/minagawah/perlin-noise-worldmap/issues"
-  },
   "dependencies": {
-    "vue": "^2.5.21"
+    "vue": "^2.5.21",
+    "vuetify": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
@@ -34,6 +22,21 @@
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
+  },
+  "bugs": {
+    "url": "https://github.com/minagawah/perlin-noise-worldmap/issues"
+  },
+  "keywords": [
+    "perlin noise",
+    "vue"
+  ],
+  "license": "mixed",
+  "main": "build/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/minagawah/perlin-noise-worldmap.git"
   }
 }
