--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "noisejs": "^2.1.0",
+    "victor": "^1.1.0",
     "vue": "^2.5.21",
     "vuetify": "^1.3.0"
   },
